--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -4,56 +4,63 @@
         <title>Quantity Measurement</title>
         <link rel="stylesheet" href="../css/Style.css">  
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>  
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     </head>
     <body>
-        <div class ="Flex Container">
-                <h3>Quanment</h3>
+           <div class ="header">
+                <h3>Quanment<h4>
             <h4>History</h4>
        </div>   
 
-             <div id="Welcome">
+             <div id="welcome">
                 <h1>Welcome to Quantity Measurement</h1>
                 </div>
+                      
+                <div class="main">
+                    <div class="choosebox">
+                        choose type</div>
+            
 
-            <div id="option">     
-            <h2>CHOOSETYPE </h2>
-           </div>
-
-              <div class = "MainCard">
+              <div class = "ThreeCardBox">
                 <div class ="Box1"> 
-                    <img src ="Asset\Pic4.png" ></img>
+                    <img src ="../Asset/Pic4.png" ></img>
                     Length
                 </div>
 
                <div class ="Box2">
-                <img src ="Asset\Pic5.png" ></img>
-                temperature
+                <img src ="../Asset/Pic5.png" ></img>
+                Temperature
                </div>
             <div class ="Box3">
-                <img src ="Asset\Pic7.png" ></img>
+                <img src ="../Asset/Pic7.png" ></img>
                 Volume
             </div>
             </div>    
+
             <div class="form">
                 <div class="from">
                     <h3>from</h3>
                     <input type="number" id="input">
-                    <select id="select">
+                    <select id="select1">
                             <option>Meter</option>`
                             <option>Centimeter</option> 
                             <option>Millimeter</option>
-                            <option>kilometer</option>
+                            <option>Kilometer</option>
                             <option>Mile</option>
+                            <option>Micrometer</option>
+                            <option>Foot</option>
+                            <option>Inch</option>
                        </select>
                      </div>
                       <div class="to">
                     <h4>to</h4>
                     <input type="number" id="output">
-                    <select id="select1">
+                    <select id="select2">
                   </select>
                 </div>
                 </div>
-        </div>   
+        </div> 
+        <script src = "../Javascript/Home.js"></script>  
     </body>
 </html>
 
